batoto and mangacow improved & refactoring

--- a/src/de/andreasgiemza/mangadownloader/Gui.form
+++ b/src/de/andreasgiemza/mangadownloader/Gui.form
@@ -215,6 +215,7 @@
                       <Connection code="chaptersTableModel" type="code"/>
                     </Property>
                     <Property name="autoscrolls" type="boolean" value="false"/>
+                    <Property name="rowSelectionAllowed" type="boolean" value="false"/>
                   </Properties>
                 </Component>
               </SubComponents>
