--- a/src/de/andreasgiemza/mangadownloader/download/Download.form
+++ b/src/de/andreasgiemza/mangadownloader/download/Download.form
@@ -117,6 +117,7 @@
     <Component class="javax.swing.JButton" name="cancelButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Cancel"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
     </Component>
   </SubComponents>
