--- a/src/de/andreasgiemza/mangadownloader/MangaDownloader.form
+++ b/src/de/andreasgiemza/mangadownloader/MangaDownloader.form
@@ -82,9 +82,10 @@
         <Component class="javax.swing.JComboBox" name="sourceComboBox">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
+              <StringArray count="3">
                 <StringItem index="0" value="Batoto"/>
                 <StringItem index="1" value="Mangacow"/>
+                <StringItem index="2" value="Mangajoy"/>
               </StringArray>
             </Property>
           </Properties>
