--- a/src/de/andreasgiemza/mangadownloader/MangaDownloader.form
+++ b/src/de/andreasgiemza/mangadownloader/MangaDownloader.form
@@ -82,10 +82,11 @@
         <Component class="javax.swing.JComboBox" name="sourceComboBox">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
+              <StringArray count="4">
                 <StringItem index="0" value="Batoto"/>
                 <StringItem index="1" value="Mangacow"/>
                 <StringItem index="2" value="Mangajoy"/>
+                <StringItem index="3" value="MangaFox"/>
               </StringArray>
             </Property>
           </Properties>
