--- a/src/de/andreasgiemza/mangadownloader/gui/panels/Download.form
+++ b/src/de/andreasgiemza/mangadownloader/gui/panels/Download.form
@@ -74,8 +74,8 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="cancelButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="errorLogPanel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <Component id="errorLogPanel" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -143,7 +143,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="errorLogScrollPane" alignment="0" min="-2" max="-2" attributes="0"/>
+              <Component id="errorLogScrollPane" alignment="0" pref="266" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
