source combobox improved (all items visible without scrolling)

--- a/src/de/andreasgiemza/mangadownloader/MangaDownloader.form
+++ b/src/de/andreasgiemza/mangadownloader/MangaDownloader.form
@@ -139,6 +139,7 @@
       <SubComponents>
         <Component class="javax.swing.JComboBox" name="sourceComboBox">
           <Properties>
+            <Property name="maximumRowCount" type="int" value="25"/>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="0"/>
             </Property>
