--- a/src/main/java/de/andreasgiemza/mangadownloader/MangaDownloader.form
+++ b/src/main/java/de/andreasgiemza/mangadownloader/MangaDownloader.form
@@ -11,6 +11,10 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="MangaDownloader"/>
+    <Property name="iconImage" type="java.awt.Image" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+      <Connection code="Toolkit.getDefaultToolkit().getImage(getClass().getClassLoader().getResource(&quot;images/icon.png&quot;))" type="code"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
