Added subscription management

--- a/src/main/java/de/andreasgiemza/mangamanager/MangaManager.form
+++ b/src/main/java/de/andreasgiemza/mangamanager/MangaManager.form
@@ -85,6 +85,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Remove subscription"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removeSubscriptionButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="addSubscriptionButton">
       <Properties>
