Added missing marked unread in MangaDetails

--- a/src/main/java/de/andreasgiemza/mangamanager/mangadetails/MangaDetails.form
+++ b/src/main/java/de/andreasgiemza/mangamanager/mangadetails/MangaDetails.form
@@ -84,6 +84,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Mark unread"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="markUnreadButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="closeButton">
       <Properties>
