Added mark all as read when adding a subscription

--- a/src/main/java/de/andreasgiemza/mangamanager/addsubscription/AddSubscription.form
+++ b/src/main/java/de/andreasgiemza/mangamanager/addsubscription/AddSubscription.form
@@ -30,7 +30,8 @@
                   <Component id="mangaFilterPanel" pref="780" max="32767" attributes="0"/>
                   <Component id="sitePanel" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      <Component id="markAllReadCheckBox" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="cancelButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="addSubscriptionButton" min="-2" max="-2" attributes="0"/>
@@ -51,6 +52,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="addSubscriptionButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="cancelButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="markAllReadCheckBox" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -244,6 +246,12 @@
         </Container>
       </SubComponents>
     </Container>
+    <Component class="javax.swing.JCheckBox" name="markAllReadCheckBox">
+      <Properties>
+        <Property name="selected" type="boolean" value="true"/>
+        <Property name="text" type="java.lang.String" value="Mark all chapters as read"/>
+      </Properties>
+    </Component>
     <Component class="javax.swing.JButton" name="cancelButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Cancel"/>
